--- a/html_page/main_page_1.html
+++ b/html_page/main_page_1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+     <img src="C:\Users\Andrey\Pictures\Frostpunk\Screen_13-06-2020_18-01-22.png">
 </head>
 <body>
 
