--- a/html_page/second_page.html
+++ b/html_page/second_page.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Main page</title>
+<meta charset="UTF-8">
+<title>Вторая страница</title>
 
-</head>
 <body>
-<button onclick="window.location.href = 'http://127.0.0.1:8000/second_page/'">
+<button onclick="window.location.href = 'http://127.0.0.1:8000/'">
 
-Second_page
+Main_page
 </button>
-<table bgcolor="white" border="2" bordercolor="black" align="center"
+<table bgcolor="white" border="2" align="center"
        width="50%">
 
     <tr>
